--- a/mapper/pom.xml
+++ b/mapper/pom.xml
@@ -25,7 +25,19 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
-    </dependencies>
+         <dependency>
+             <groupId>org.example</groupId>
+             <artifactId>model</artifactId>
+             <version>1.0-SNAPSHOT</version>
+             <scope>compile</scope>
+         </dependency>
+         <dependency>
+             <groupId>org.example</groupId>
+             <artifactId>model</artifactId>
+             <version>1.0-SNAPSHOT</version>
+             <scope>compile</scope>
+         </dependency>
+     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
